@@ -9,6 +9,7 @@ Release 0.19.1 - Unreleased
   IMPROVEMENTS
    HBASE-845   HCM.isTableEnabled doesn't really tell if it is, or not
    HBASE-903   [shell] Can't set table descriptor attributes when I alter a table
+   HBASE-1178  Add shutdown command to shell
 
 Release 0.19.0
   INCOMPATIBLE CHANGES
